# feeluown-kuwo

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
examples/: album_info.json  artist_albums.json  artist_info.json  artist_recommend.json  artist_songs.json  banner.json  playlist_info.json  playlist_recommend.json  playlist_tags.json  radio_list.json  rank_index.json  rank_music.json  rank_top.json  search.json  search_album.json  search_artist.json  search_playlist.json  search_v2.json  song_detail.json  song_lyrics.json  song_mv.txt  song_url.json  song_url_mobi.txt
fuo_kuwo/: DES.py  __init__.py  api.py  models.py  provider.py  schemas.py  ui.py  utils.py
fuo_kuwo/assets/: README.md
fuo_kuwo/enc/: decrypt.py
fuo_kuwo/pages/: explorer.py
tests/: test_kuwo_api.py  test_schemas.py  test_utils.py
